<resources>
    <string name="app_name">Room Demo</string>
    <string name="update">UPDATE</string>
    <string name="cancel">CANCEL</string>
    <string name="email_id">Email ID</string>
    <string name="enter_email_id">Enter Email ID</string>
    <string name="enter_name">Enter Name</string>
    <string name="name">Name</string>
    <string name="update_record">Update Record</string>
</resources>