<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:id="@+id/tvTitle"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update_record"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold" />


    <TextView
        app:layout_constraintBottom_toBottomOf="@id/etUpdateName"
        app:layout_constraintTop_toTopOf="@id/etUpdateName"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/tvNameLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/etUpdateName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:hint="@string/enter_name"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tvNameLabel"
        app:layout_constraintTop_toBottomOf="@id/tvTitle" />



    <TextView
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/etUpdateEmailId"
        app:layout_constraintTop_toTopOf="@id/etUpdateEmailId"
        android:id="@+id/tvEmailLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/email_id"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/etUpdateEmailId"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:hint="@string/enter_email_id"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tvEmailLabel"
        app:layout_constraintTop_toBottomOf="@id/etUpdateName" />



    <TextView
        app:layout_constraintTop_toBottomOf="@id/etUpdateEmailId"
        app:layout_constraintEnd_toStartOf="@id/tvCancel"
        android:id="@+id/tvUpdate"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:foreground="?attr/selectableItemBackground"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/update"
        android:textColor="@android:color/holo_red_dark"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvCancel"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:foreground="?attr/selectableItemBackground"
        android:gravity="center"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:text="@string/cancel"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etUpdateEmailId"
        tools:ignore="TouchTargetSizeCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>